# scratch-dingdong-rag

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/dingdong_rag/: __init__.py  dingdong.py
src/dingdong_rag/caching/: document_cache.py
src/dingdong_rag/chat/: __init__.py  chat_completion.py  context_compression.py  models.py  query_enhancement.py
src/dingdong_rag/chunking/: __init__.py  chunking.py
src/dingdong_rag/cli/: __init__.py  main.py  metadata_cli.py  rag_cli.py
src/dingdong_rag/core/: complete_rag_pipeline.py  ingestion.py
src/dingdong_rag/core/services/: ingestor.py  initializer.py  query_executor.py
src/dingdong_rag/embeddings/: __init__.py  embedding_config.py  embedding_manager.py
src/dingdong_rag/metadata/: metadata.py
src/dingdong_rag/parsing/: __init__.py  docling_adapter.py  hybrid.py  ocr.py  pdf_parser.py  pymupdf.py  validation.py
src/dingdong_rag/retrieval/: __init__.py  crag.py  domain_detection.py  reranking.py  vector_store.py
src/dingdong_rag/utils/: log.py
